fixing errors with GET routes. All are working on local host now
